force-app/main/default/objects/MovieFeedback__c/MovieFeedback__c.object-meta.xml
<CustomObject>
    <label>MovieFeedback</label>
    <nameField>
        <displayFormat>MF-{00000}</displayFormat>
        <label>Movie Feedback Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>movieFeedbacks</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>