force-app/main/default/objects/MovieFeedback__c/fields/Movie_Name__c.field-meta.xml
<CustomField>
    <fullName>Movie_Name__c</fullName>
    <label>Movie Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>