force-app/main/default/objects/MovieFeedback__c/fields/Movie_Overall_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Movie_Overall_Feedback__c</fullName>
    <label>Movie Overall Feedback</label>
    <type>TextArea</type>
</CustomField>