force-app/main/default/objects/MovieFeedback__c/fields/Movie_Part_You_Liked__c.field-meta.xml
<CustomField>
    <fullName>Movie_Part_You_Liked__c</fullName>
    <label>Movie Part You Liked</label>
    <type>TextArea</type>
</CustomField>