force-app/main/default/objects/MovieFeedback__c/fields/Movie_Rating__c.field-meta.xml
<CustomField>
    <fullName>Movie_Rating__c</fullName>
    <label>Movie Rating</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>