force-app/main/default/objects/MovieFeedback__c/fields/Movie_Watch_Date__c.field-meta.xml
<CustomField>
    <fullName>Movie_Watch_Date__c</fullName>
    <label>Movie Watch Date</label>
    <type>Date</type>
</CustomField>