force-app/main/default/objects/MovieFeedback__c/fields/Movie_Would_You_Recommend__c.field-meta.xml
<CustomField>
    <fullName>Movie_Would_You_Recommend__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Movie Would You Recommend?</label>
    <type>Checkbox</type>
</CustomField>