force-app/main/default/objects/MovieFeedback__c/fields/User_Mobile_Number__c.field-meta.xml
<CustomField>
    <fullName>User_Mobile_Number__c</fullName>
    <label>User Mobile Number</label>
    <type>Phone</type>
</CustomField>